refactor: use getFirst()/getLast() instead of get(0)/get(1) in test